--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,3 +42,10 @@ jobs:
 
       - name: Build
         run: ./gradlew build
+        
+      - name: capture build artifacts
+        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from latest java on one OS
+        uses: actions/upload-artifact@v2
+        with:
+          name: Artifacts
+          path: build/libs/
