--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ org.gradle.jvmargs=-Xmx1G
 	immersive_portals_version=v1.3.3-1.18
 	resource_locator_api_version=0.3.2
 	packet_tweaker_version=0.3.0+1.18.2
+	qsl_version=3.0.0-beta.15+1.19.2
+	qsl_registry_version=3.0.0-beta.15+1.19.2
